Fix line spacing in news page

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -545,7 +545,7 @@ ul.nested-navi {
   li {
     border-top: 1px solid $brand-color;
     padding: 1em 0;
-    line-height: 1;
+    //line-height: 1;
 
     > h3{
       line-height: 1.5;
